2023-Dec-23 Struan Robertson

		*  MultiHinderedRotorPotential.h/.cpp: Extension of coupled hindered rotor 
		potential to include basis product terms.

2023-Dec-23 Struan Robertson

		*  MultiHinderedRotorPotential.h/.cpp, ClassicalCoupledRotors.cpp: Initial 
		implementation of coupled hindered rotor potential.

2023-Dec-18 Struan Robertson

		*  CollisionOperator.h/.cpp, System.cpp: Implementation of the effective 
		collision-radiation temperature method.

2023-Dec-18 Struan Robertson

		*  gWellProperties.h, gWellRadiationTransition.h, MesmerEnv.h/.cpp, TMatrix.h: Mods. 
		in preparation for the implementation of the effective collision-radiation temperature
		method.

2023-Dec-01 Struan Robertson

		* HinderedRotorUtils.h/.cpp: Initial outline of N-dimensional angular potential.

2023-Sep-24 Struan Robertson

		* GaussianDistFragmentation.cpp: Revised functional form.

2023-Sep-09 Struan Robertson

		* MesmerILT.cpp: Further changes in for secondary activation energy parsing.

2023-Sep-03 Struan Robertson

		* System.cpp, gWellRadiationTransition.cpp, MesmerEnv.h/.cpp, ConditionsManager.h/.cpp: 
		Introduction of a sliding temperature scale depending on bath gas concentration to 
		account for the effects of a radiation field.

2023-Aug-31 Struan Robertson

		* System.cpp, gWellProperties.cpp: Modifications to allow collision and radiation
		temperatures to differ.

2023-Aug-28 Struan Robertson

		* GaussianDistFragmentation.cpp: Revision of the Gaussian fragmentation distribution
		class to include unit parsing and some minor tidying.

2023-Aug-28 Struan Robertson

		* MesmerEnv.h/.cpp, ConditionsManager.cpp: Preparative changes for improved support
		for radiation transitions.

2023-Aug-28 Struan Robertson

		* GaussianDistFragmentation.cpp: Initial revision of the Gaussian fragmentation distribution
		class.

2023-Aug-21 Struan Robertson

		* MesmerILT.cpp: Fix for secondary activation energy parsing issue.
