@@ -16,7 +16,7 @@
 
 #include "../XMLPersist.h"
 #include <vector>
-#include "../Spline.h"
+// #include "../Spline.h"
 
 namespace mesmer
 {
@@ -27,8 +27,7 @@ namespace mesmer
   {
   public:
 
-		MultiHinderedRotorPotential() : m_units("kJ/mol"), m_expansion(1),
-      m_useSinTerms(false), m_potential(), m_angles(), m_nVar(0), m_f0(0.0), m_Calpha(), m_Cbeta(), m_Salpha(), m_Sbeta()
+		MultiHinderedRotorPotential() : m_units("kJ/mol"), m_expansion(1), m_potential(), m_angles(), m_nVar(0), m_Calpha(), m_bondIDs()
     { };
 		virtual ~MultiHinderedRotorPotential() {};
 
@@ -38,19 +37,19 @@ namespace mesmer
 
     double calculatePotential(std::vector<double> &abscissa) const;
 
+    void getBondIDs(std::vector<std::string> &bondIDSs) const {
+      bondIDSs = m_bondIDs;
+    };
+
   protected:
 
     std::string m_units;              // Units that potential energy is expressed in.
     size_t m_expansion;               // Number of coefficients in the cosine expansion.
-    bool m_useSinTerms;               // If true sine terms are used in the representation of the potential.
     std::vector<double> m_potential;  // Potential values.
     std::vector<std::vector<double> > m_angles; // Conformer angles.
     size_t m_nVar;
-    double m_f0 ;
     std::vector<double> m_Calpha;
-    std::vector<double> m_Cbeta;
-    std::vector<double> m_Salpha;
-    std::vector<double> m_Sbeta;
+    std::vector<std::string> m_bondIDs;
   };
 
 
