@@ -1,3 +1,8 @@
+2023-Dec-28 Struan Robertson
+
+		*  MultiHinderedRotorPotential.h/.cpp, ClassicalCoupledRotors.cpp: Update of
+		classical coupled rotors class to invoke coupled hindered rotor potential.
+
 2023-Dec-23 Struan Robertson
 
 		*  MultiHinderedRotorPotential.h/.cpp: Extension of coupled hindered rotor 
